# biolink-subset

./: .cruft.json  CONTRIBUTING.md  Makefile  README.md  about.yaml  biolink_shuttle.Makefile  biolink_shuttle.tsv  biolink_shuttle_template.yaml  mkdocs.yml  project.Makefile  pyproject.toml
.github/workflows/: deploy-docs.yaml  main.yaml
data_harmonizer/: menu.json
examples/: README.md
project/excel/: biolink_subset.xlsx
project/graphql/: biolink_subset.graphql
project/jsonld/: biolink_subset.context.jsonld  biolink_subset.jsonld
project/jsonschema/: biolink_subset.schema.json
project/owl/: biolink_subset.owl.ttl
project/prefixmap/: biolink_subset.yaml
project/protobuf/: biolink_subset.proto
project/shacl/: biolink_subset.shacl.ttl
project/shex/: biolink_subset.shex
project/sqlschema/: biolink_subset.sql
src/biolink_subset/datamodel/: __init__.py  biolink_subset.py
src/biolink_subset/schema/: biolink_subset.yaml
src/data/examples/invalid/: entityCollection-undefined-slot.yaml
src/data/examples/jsonshema-passes/: entityCollection-dupe-ids.yaml
src/data/examples/valid/: entity-minimal.yaml  entityCollection-minimal-plus.yaml
src/docs/: about.md
tests/: __init__.py  test_valid_collections.py
